feat: add manual shadcn install

--- a/app/docs/accordion/page.mdx
+++ b/app/docs/accordion/page.mdx
@@ -54,7 +54,11 @@ Here, we apply `-rotate-180` to rotate the icon 180 degrees when its associated 
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/accordion.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
