--- a/app/docs/animated-background/page.mdx
+++ b/app/docs/animated-background/page.mdx
@@ -56,7 +56,11 @@ The `AnimatedBackground` component visually highlights selected items by sliding
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/animated-background.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
