--- a/app/docs/animated-number/page.mdx
+++ b/app/docs/animated-number/page.mdx
@@ -51,7 +51,11 @@ Easily animate numbers.
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/animated-number.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
