--- a/app/docs/carousel/page.mdx
+++ b/app/docs/carousel/page.mdx
@@ -62,7 +62,11 @@ We can use `index` and `onIndexChange` to create custom indicators for the carou
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/carousel.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
