--- a/app/docs/cursor/page.mdx
+++ b/app/docs/cursor/page.mdx
@@ -48,7 +48,11 @@ A custom cursor component with optional spring animations. It can be globally ap
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/cursor.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
