--- a/app/docs/dialog/page.mdx
+++ b/app/docs/dialog/page.mdx
@@ -71,7 +71,11 @@ You can customize the backdrop using the `backdrop:` prefix on `DialogContent`, 
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/dialog.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
