--- a/app/docs/disclosure/page.mdx
+++ b/app/docs/disclosure/page.mdx
@@ -44,7 +44,11 @@ Image from [Les others studio](https://www.instagram.com/p/Crvt1j8tybi/?img_inde
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/disclosure.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
