--- a/app/docs/dock/page.mdx
+++ b/app/docs/dock/page.mdx
@@ -33,7 +33,11 @@ A versatile UI element that provides a flexible and customizable way to organize
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/dock.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
