--- a/app/docs/in-view/page.mdx
+++ b/app/docs/in-view/page.mdx
@@ -54,7 +54,11 @@ Images are from [cosmos - oui are one ::](https://www.cosmos.so/biancadjardins/o
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/in-view.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
