--- a/app/docs/infinite-slider/page.mdx
+++ b/app/docs/infinite-slider/page.mdx
@@ -48,7 +48,11 @@ Infinite scrolling slider component that smoothly loops through its children. It
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/infinite-slider.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
