--- a/app/docs/morphing-dialog/page.mdx
+++ b/app/docs/morphing-dialog/page.mdx
@@ -48,7 +48,11 @@ A dialog that uses layout animations to transition content into a focused view. 
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/morphing-dialog.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
