--- a/app/docs/spinning-text/page.mdx
+++ b/app/docs/spinning-text/page.mdx
@@ -51,7 +51,11 @@ Easily animate text circularly. Customize the animation with variants and transi
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/spinning-text.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
