--- a/app/docs/spotlight/page.mdx
+++ b/app/docs/spotlight/page.mdx
@@ -55,7 +55,11 @@ You can create a spotlight border by creating a container with a padding that wi
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/spotlight.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
