--- a/app/docs/text-effect/page.mdx
+++ b/app/docs/text-effect/page.mdx
@@ -87,7 +87,11 @@ Easily animate text content with various effects. You can apply animations per c
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/text-effect.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
