--- a/app/docs/text-loop/page.mdx
+++ b/app/docs/text-loop/page.mdx
@@ -53,7 +53,11 @@ You can use the `onIndexChange` prop to trigger a callback function when the ind
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/text-loop.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
