--- a/app/docs/text-morph/page.mdx
+++ b/app/docs/text-morph/page.mdx
@@ -41,7 +41,11 @@ Animates text by morphing shared letters between words, creating fluid transitio
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/text-morph.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
