--- a/app/docs/text-shimmer/page.mdx
+++ b/app/docs/text-shimmer/page.mdx
@@ -42,7 +42,11 @@ You can use the `[--base-color]` and `[--base-gradient-color]` CSS variables to 
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/text-shimmer.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
