--- a/app/docs/transition-panel/page.mdx
+++ b/app/docs/transition-panel/page.mdx
@@ -42,7 +42,11 @@ Easy way to switch between different pieces of content with enter and exit anima
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/transition-panel.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
