--- a/app/docs/animated-group/page.mdx
+++ b/app/docs/animated-group/page.mdx
@@ -53,7 +53,11 @@ Images are from [cosmos - Impressionisme](https://www.cosmos.so/ibelick/impressi
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/animated-group.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
