--- a/app/docs/border-trail/page.mdx
+++ b/app/docs/border-trail/page.mdx
@@ -48,7 +48,11 @@ Animated border effect that moves along the edges of its parent container.
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/border-trail.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
