--- a/app/docs/image-comparison/page.mdx
+++ b/app/docs/image-comparison/page.mdx
@@ -59,7 +59,11 @@ Interactively compare two images with a draggable slider to reveal differences.
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/image-comparison.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
