--- a/app/docs/scroll-progress/page.mdx
+++ b/app/docs/scroll-progress/page.mdx
@@ -48,7 +48,11 @@ Animated scroll progress for your web pages.
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/scroll-progress.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
