--- a/app/docs/text-scramble/page.mdx
+++ b/app/docs/text-scramble/page.mdx
@@ -53,7 +53,11 @@ Text animation that transforms text by randomly cycling through characters befor
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/text-scramble.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
