--- a/app/docs/tilt/page.mdx
+++ b/app/docs/tilt/page.mdx
@@ -42,7 +42,11 @@ Example of the [Spotlight component](/docs/spotlight) used with the Tilt compone
 
 <TabsContent value="cli">
 
-<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/tilt.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
 
 </TabsContent>
 
