feat: doc UI update, add shadcn manual install (#88)
* feat: add steps

* feat: add mdx tabs

* docs: add installation tabs for each components

* feat: ui update table

* feat: add layout underline tab

* feat: add underline sidebar

* feat: add manual shadcn install

--- a/app/docs/animated-number/page.mdx
+++ b/app/docs/animated-number/page.mdx
@@ -40,13 +40,40 @@ Easily animate numbers.
   classNameComponentContainer='min-h-[250px]'
 />
 
-## Code
+## Installation
+
+<Tabs defaultValue="cli">
+
+<TabsList>
+  <TabsTrigger value='cli'>CLI</TabsTrigger>
+  <TabsTrigger value='manual'>Manual</TabsTrigger>
+</TabsList>
+
+<TabsContent value="cli">
+
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/animated-number.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
+
+</TabsContent>
+
+<TabsContent value="manual">
+
+<Steps>
+
+<Step>Copy and paste the following code into your project.</Step>
 
 <CodeBlock filePath='components/core/animated-number.tsx' />
 
-**Please add:**
+<Step>Update the import paths to match your project setup.</Step>
 
-- [cn](https://github.com/ibelick/motion-primitives/blob/main/lib/utils.ts)
+</Steps>
+
+</TabsContent>
+
+</Tabs>
 
 ## Component API
 
