--- a/app/docs/transition-panel/page.mdx
+++ b/app/docs/transition-panel/page.mdx
@@ -31,13 +31,40 @@ Easy way to switch between different pieces of content with enter and exit anima
   filePath='app/docs/transition-panel/transition-panel-card.tsx'
 />
 
-## Code
+## Installation
+
+<Tabs defaultValue="cli">
+
+<TabsList>
+  <TabsTrigger value='cli'>CLI</TabsTrigger>
+  <TabsTrigger value='manual'>Manual</TabsTrigger>
+</TabsList>
+
+<TabsContent value="cli">
+
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/transition-panel.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
+
+</TabsContent>
+
+<TabsContent value="manual">
+
+<Steps>
+
+<Step>Copy and paste the following code into your project.</Step>
 
 <CodeBlock filePath='components/core/transition-panel.tsx' />
 
-**Please add:**
+<Step>Update the import paths to match your project setup.</Step>
 
-- [cn](https://github.com/ibelick/motion-primitives/blob/main/lib/utils.ts)
+</Steps>
+
+</TabsContent>
+
+</Tabs>
 
 ## Component API
 
