--- a/app/docs/morphing-dialog/page.mdx
+++ b/app/docs/morphing-dialog/page.mdx
@@ -37,14 +37,40 @@ A dialog that uses layout animations to transition content into a focused view. 
   filePath='app/docs/morphing-dialog/morphing-dialog-image.tsx'
 />
 
-## Code
+## Installation
+
+<Tabs defaultValue="cli">
+
+<TabsList>
+  <TabsTrigger value='cli'>CLI</TabsTrigger>
+  <TabsTrigger value='manual'>Manual</TabsTrigger>
+</TabsList>
+
+<TabsContent value="cli">
+
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/morphing-dialog.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
+
+</TabsContent>
+
+<TabsContent value="manual">
+
+<Steps>
+
+<Step>Copy and paste the following code into your project.</Step>
 
 <CodeBlock filePath='components/core/morphing-dialog.tsx' />
 
-**Please add:**
+<Step>Update the import paths to match your project setup.</Step>
 
-- [useClickOutside](https://github.com/ibelick/motion-primitives/blob/main/hooks/useClickOutside.tsx)
-- [cn](https://github.com/ibelick/motion-primitives/blob/main/lib/utils.ts)
+</Steps>
+
+</TabsContent>
+
+</Tabs>
 
 ## Component API
 
