--- a/app/docs/dialog/page.mdx
+++ b/app/docs/dialog/page.mdx
@@ -72,7 +72,7 @@ You can customize the backdrop using the `backdrop:` prefix on `DialogContent`, 
 <TabsContent value="cli">
 
 <CodeBlock
-  code={`npx shadcn add "https://motion-primitives.com/c/dialog.json"`}
+  code={`npx shadcn add "https://motion-primitives.com/c/dialog.json" "https://motion-primitives.com/h/usePreventScroll.json"`}
   lang='bash'
   className='h-[52px]'
 />
