--- a/app/docs/morphing-dialog/page.mdx
+++ b/app/docs/morphing-dialog/page.mdx
@@ -49,7 +49,7 @@ A dialog that uses layout animations to transition content into a focused view. 
 <TabsContent value="cli">
 
 <CodeBlock
-  code={`npx shadcn add "https://motion-primitives.com/c/morphing-dialog.json"`}
+  code={`npx shadcn add "https://motion-primitives.com/c/morphing-dialog.json" "https://motion-primitives.com/h/useClickOutside.json"`}
   lang='bash'
   className='h-[52px]'
 />
