feat: udpate props

--- a/app/docs/text-effect/page.mdx
+++ b/app/docs/text-effect/page.mdx
@@ -77,9 +77,9 @@ Easily animate text content with various effects. You can apply animations per c
   hasReTrigger
 />
 
-### Text Effect with duration
+### Text Effect with speed
 
-You can control the speed of the animation by using the `speedReveal` and `speedAnimation` props.
+You can control the speed of the animation by using the `speedReveal` and `speedSegment` props.
 
 <ComponentCodePreview
   component={<TextEffectSpeed />}
@@ -143,4 +143,4 @@ You can control the speed of the animation by using the `speedReveal` and `speed
 | containerTransition     | Transition                                               | undefined | Optional transition for the container.                          |
 | segmentTransition       | Transition                                               | undefined | Optional transition for the segments.                           |
 | speedReveal             | number                                                   | 1         | Controls the speed of the reveal animation.                     |
-| speedAnimation          | number                                                   | 1         | Controls the speed of the animation.                            |
+| speedSegment            | number                                                   | 1         | Controls the speed of the animation.                            |
