feat: various updates Animated Background, Animated Number, Morphing Dialog, Text Effect, Text Loop

--- a/app/docs/animated-number/page.mdx
+++ b/app/docs/animated-number/page.mdx
@@ -77,8 +77,9 @@ Easily animate numbers.
 
 ## Component API
 
-| Prop          | Type          | Default | Description                                               |
-| :------------ | :------------ | :------ | :-------------------------------------------------------- |
-| value         | number        |         | The number to be animated.                                |
-| className     | string        |         | Optional CSS class for styling the number item container. |
-| springOptions | SpringOptions |         | Spring options from motion for the animation.             |
+| Prop          | Type              | Default | Description                                               |
+| :------------ | :---------------- | :------ | :-------------------------------------------------------- |
+| value         | number            |         | The number to be animated.                                |
+| className     | string            |         | Optional CSS class for styling the number item container. |
+| springOptions | SpringOptions     |         | Spring options from motion for the animation.             |
+| as            | React.ElementType | 'span'  | The HTML tag to render the number in.                     |
