feat: add variants, transitions props to TextMorph, fix typo install glow-effect

--- a/app/docs/glow-effect/page.mdx
+++ b/app/docs/glow-effect/page.mdx
@@ -51,7 +51,7 @@ You can use different `modes` to animate the glow effect.
 <TabsContent value="cli">
 
 <CodeBlock
-  code={`npx shadcn add "https://motion-primitives.com/c/dock.json"`}
+  code={`npx shadcn add "https://motion-primitives.com/c/glow-effect.json"`}
   lang='bash'
   className='h-[52px]'
 />
@@ -83,8 +83,8 @@ You can use different `modes` to animate the glow effect.
 | className  | string                                                                                                     | undefined                                    | Optional CSS class for styling the component.      |
 | style      | React.CSSProperties                                                                                        | undefined                                    | Optional CSS properties for styling the component. |
 | colors     | string[]                                                                                                   | ['#FF5733', '#33FF57', '#3357FF', '#F1C40F'] | The colors to use for the glow effect.             |
-| mode       | 'rotate' \| 'pulse' \| 'breathe' \| 'colorShift' \| 'flowHorizontal' \| 'static'                           | 'rotate'                                      | The mode to use for the glow effect.               |
-| blur       | 'number' \| 'softest' \| 'soft' \| 'medium' \| 'strong' \| 'strong' \| 'stronger' \| 'strongest' \| 'none' | 'medium'                                    | The blur to use for the glow effect.               |
+| mode       | 'rotate' \| 'pulse' \| 'breathe' \| 'colorShift' \| 'flowHorizontal' \| 'static'                           | 'rotate'                                     | The mode to use for the glow effect.               |
+| blur       | 'number' \| 'softest' \| 'soft' \| 'medium' \| 'strong' \| 'strong' \| 'stronger' \| 'strongest' \| 'none' | 'medium'                                     | The blur to use for the glow effect.               |
 | transition | Transition                                                                                                 | undefined                                    | The transition to use for the glow effect.         |
 | scale      | number                                                                                                     | 1                                            | The scale to use for the glow effect.              |
 | duration   | number                                                                                                     | 5                                            | The duration to use for the glow effect.           |
