--- a/app/docs/installation/page.mdx
+++ b/app/docs/installation/page.mdx
@@ -31,19 +31,18 @@ Add [Lucide React](https://lucide.dev/) icons:
 
 <CodeBlock code={`npm install lucide-react`} lang='bash' className='h-[52px]' />
 
-</Steps>
+<Step>That's it</Step>
 
-## Project Structure
-
-Here's the recommended project structure:
+You can now start adding components to your project.
 
 <CodeBlock
-  code={`your-project/
-├── components/
-│   └── motion-ui/     # Motion components directory
-├── lib/
-│   └── utils.ts      # Utility functions`}
-  lang='text'
+  code={`npx shadcn add "https://motion-primitives.com/c/text-effect.json"`}
+  lang='bash'
+  className='h-[52px]'
 />
 
-You're all set! You can now start enjoying the components.
+The command above will add the Text Effect component to your project. You can then import it anywhere in your project.
+
+You can also choose manual installation and copy the code from the [components page](https://motion-primitives.com/docs/text-effect#installation).
+
+</Steps>
