feat: upgrade tailwind css v4

--- a/app/docs/animated-group/page.mdx
+++ b/app/docs/animated-group/page.mdx
@@ -86,6 +86,6 @@ Images are from [cosmos - Impressionisme](https://www.cosmos.so/ibelick/impressi
 | children  | ReactNode                                              |           | The child elements to be animated.                   |
 | className | string                                                 | undefined | Optional CSS class for styling the component.        |
 | variants  | `{ container?: Variants; item?: Variants; }`           | undefined | Custom variants for container and item animations.   |
-| preset    | 'fade' \| 'slide' \| 'scale' \| 'blur' \| 'blur-slide' | undefined | Preset animations to apply to the group of elements. |
+| preset    | 'fade' \| 'slide' \| 'scale' \| 'blur-sm' \| 'blur-slide' | undefined | Preset animations to apply to the group of elements. |
 | as        | React.ElementType                                    | 'div'     | The HTML element to render the component as.       |
 | asChild   | React.ElementType                                    | 'div'     | The HTML element to render the child elements as.   |
