--- a/app/docs/glow-effect/page.mdx
+++ b/app/docs/glow-effect/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Glow Effect - Motion-Primitives',
   description:
-    'A customizable glow effect with animation modes, colors, blur, and transitions.',
+    'A customizable glow effect with animation modes, colors, blur-sm, and transitions.',
 };
 
 import { GlowEffectCardBackground } from './glow-effect-card-background';
