--- a/app/docs/text-effect/page.mdx
+++ b/app/docs/text-effect/page.mdx
@@ -133,7 +133,7 @@ You can control the speed of the animation by using the `speedReveal` and `speed
 | as                      | keyof JSX.IntrinsicElements                              | 'p'       | The HTML tag to render, defaults to paragraph.                  |
 | variants                | `{ container?: Variants; item?: Variants; }`             | undefined | Custom variants for container and item animations.              |
 | className               | string                                                   | undefined | Optional CSS class for styling the component.                   |
-| preset                  | 'blur' \| 'fade-in-blur' \| 'scale' \| 'fade' \| 'slide' | 'fade'    | Preset animations to apply to the text.                         |
+| preset                  | 'blur-sm' \| 'fade-in-blur' \| 'scale' \| 'fade' \| 'slide' | 'fade'    | Preset animations to apply to the text.                         |
 | delay                   | number                                                   | 0         | Delay before the animation starts.                              |
 | trigger                 | boolean                                                  | true      | Controls whether the animation should be triggered.             |
 | onAnimationComplete     | () => void                                               | undefined | Callback function when the animation completes.                 |
