--- a/app/docs/progressive-blur/page.mdx
+++ b/app/docs/progressive-blur/page.mdx
@@ -1,15 +1,17 @@
 export const metadata = {
   title: 'Progressive blur - Motion-Primitives',
   description:
-    'A simple blur effect that can be used to create a progressive blur effect.',
+    'A Progressive Blur component creates a layered blur effect using motion and gradient masks. It progressively blurs layers based on direction and intensity, adding visual depth.',
 };
 
 import { ProgressiveBlurBasic } from './progressive-blur-basic';
+import { ProgressiveBlurHover } from './progressive-blur-hover';
+import { ProgressiveBlurSlider } from './progressive-blur-slider';
 import ComponentCodePreview from '@/components/website/component-code-preview';
 
 # Progressive blur
 
-A simple blur effect that can be used to create a progressive blur effect.
+A Progressive Blur component creates a layered blur effect using motion and gradient masks. It progressively blurs layers based on direction and intensity, adding visual depth.
 
 ## Examples
 
@@ -17,5 +19,32 @@ A simple blur effect that can be used to create a progressive blur effect.
 
 <ComponentCodePreview
   component={<ProgressiveBlurBasic />}
-  filePath='components/core/progressive-blur.tsx'
+  filePath='app/docs/progressive-blur/progressive-blur-basic.tsx'
 />
+
+### Progressive blur with hover
+
+<ComponentCodePreview
+  component={<ProgressiveBlurHover />}
+  filePath='app/docs/progressive-blur/progressive-blur-hover.tsx'
+/>
+
+### Progressive blur with slider and different directions
+
+You can change the direction of the blur effect with the `direction` prop.
+
+<ComponentCodePreview
+  component={<ProgressiveBlurSlider />}
+  filePath='app/docs/progressive-blur/progressive-blur-slider.tsx'
+/>
+
+## Component API
+
+### ProgressiveBlur
+
+| Prop          | Type                                   | Default | Description                               |
+| :------------ | :------------------------------------- | :------ | :---------------------------------------- |
+| direction     | 'top' \| 'right' \| 'bottom' \| 'left' | 'top'   | The direction of the blur effect.         |
+| blurLayers    | number                                 | 8       | The number of blur layers.                |
+| className     | string                                 | ''      | The class name to apply to the component. |
+| blurIntensity | number                                 | 0.25    | The intensity of the blur effect.         |
