--- a/app/docs/progressive-blur/page.mdx
+++ b/app/docs/progressive-blur/page.mdx
@@ -8,6 +8,7 @@ import { ProgressiveBlurBasic } from './progressive-blur-basic';
 import { ProgressiveBlurHover } from './progressive-blur-hover';
 import { ProgressiveBlurSlider } from './progressive-blur-slider';
 import ComponentCodePreview from '@/components/website/component-code-preview';
+import CodeBlock from '@/components/website/code-block';
 
 # Progressive blur
 
@@ -37,6 +38,41 @@ You can change the direction of the blur effect with the `direction` prop.
   component={<ProgressiveBlurSlider />}
   filePath='app/docs/progressive-blur/progressive-blur-slider.tsx'
 />
+
+## Installation
+
+<Tabs defaultValue="cli">
+
+<TabsList>
+  <TabsTrigger value='cli'>CLI</TabsTrigger>
+  <TabsTrigger value='manual'>Manual</TabsTrigger>
+</TabsList>
+
+<TabsContent value="cli">
+
+<CodeBlock
+  code={`npx shadcn add "https://motion-primitives.com/c/progressive-blur.json"`}
+  lang='bash'
+  className='h-[52px]'
+/>
+
+</TabsContent>
+
+<TabsContent value="manual">
+
+<Steps>
+
+<Step>Copy and paste the following code into your project.</Step>
+
+<CodeBlock filePath='components/core/progressive-blur.tsx' />
+
+<Step>Update the import paths to match your project setup.</Step>
+
+</Steps>
+
+</TabsContent>
+
+</Tabs>
 
 ## Component API
 
