feat: add component api

--- a/app/docs/scroll-progress/page.mdx
+++ b/app/docs/scroll-progress/page.mdx
@@ -74,6 +74,8 @@ Animated scroll progress for your web pages.
 
 ## Component API
 
+### ScrollProgress
+
 | Prop          | Type          | Default | Description                                                |
 | :------------ | :------------ | :------ | :--------------------------------------------------------- |
 | className     | string        |         | Optional CSS class for styling the scroll progress.        |
