--- a/app/docs/sliding-number/page.mdx
+++ b/app/docs/sliding-number/page.mdx
@@ -71,3 +71,13 @@ A component that slides numbers.
 </TabsContent>
 
 </Tabs>
+
+## Component API
+
+### SlidingNumber
+
+| Prop             | Type    | Default | Description                                                                |
+| :--------------- | :------ | :------ | :------------------------------------------------------------------------- |
+| value            | string  |         | The numerical value to be displayed.                                       |
+| padStart         | boolean | false   | Whether to pad the integer part with a leading zero if it is less than 10. |
+| decimalSeparator | string  | '.'     | The character to use as the decimal separator.                             |
