feat: add credits, run registry

--- a/app/docs/sliding-number/page.mdx
+++ b/app/docs/sliding-number/page.mdx
@@ -22,14 +22,14 @@ A component that slides numbers.
   filePath='app/docs/sliding-number/clock.tsx'
 />
 
-### Sliding Number With Slider
+### Sliding number with slider
 
 <ComponentCodePreview
   component={<SlidingNumberWithSlider />}
   filePath='app/docs/sliding-number/sliding-slider.tsx'
 />
 
-### Sliding Number Basic
+### Sliding number basic
 
 <ComponentCodePreview
   component={<SlidingNumberBasic />}
@@ -81,3 +81,7 @@ A component that slides numbers.
 | value            | string  |         | The numerical value to be displayed.                                       |
 | padStart         | boolean | false   | Whether to pad the integer part with a leading zero if it is less than 10. |
 | decimalSeparator | string  | '.'     | The character to use as the decimal separator.                             |
+
+# Credits
+
+Inspired by [Number Flow](https://number-flow.barvian.me/) and [Animated Counter](https://buildui.com/recipes/animated-counter).
